# TP-Algoritmos

./: .gitignore
Librerias/TDA_Cola/: CMakeLists.txt  cola.c  cola.h
Librerias/TDA_Lista/: CMakeLists.txt  lista.c  lista.h
Librerias/TDA_ListaCircular/: CMakeLists.txt  listaCircular.c  listaCircular.h
Librerias/TDA_ListaDoble/: CMakeLists.txt  listaDoble.c  listaDoble.h
Librerias/TDA_Pila/: CMakeLists.txt  pila.c  pila.h
Librerias/comun/: CMakeLists.txt  comun.c  comun.h
PruebaLibrerias/: CMakeLists.txt  main.c
